# fspell

./: LICENSE  README.md
.github/workflows/: rust.yml
config/: config.json
fspell/: Cargo.toml
fspell/src/: main.rs
fspell/src/args/: args.rs
fspell/src/config/: config.rs
fspell/src/spell_handler/: mod.rs  spell_handler.rs
spells/: fuzzing.md  recon.md  scanning.md  transfers.md  xss.md
src/: main.rs
src/args/: args.rs
src/spell_handler/: spell_handler.rs
