[package]
name = "fspell"
version = "0.2.0"
edition = "2021"
authors = ["Andy <andy@andy.codes>"]
license = "GNU General Public License v3.0"
description = "A tool to search through your favourite hacking spells"
readme = "README.md"
homepage = "https://github.com/0x4ndy/fspell"
repository = "https://github.com/0x4ndy/fspell"
keywords = ["cli", "search", "hacking"]
catergories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4"
clap = "3"
crossterm = "0.24.0"
